--- a/chat/web.config
+++ b/chat/web.config
@@ -1,6 +1,9 @@
-<?xml version="1.0" encoding="utf-8" ?>
-<configuration>
-  <system.web>
-
-  </system.web>
+<?xml version="1.0"?>
+ <configuration>
+ <appSettings/>
+ <connectionStrings/>
+<system.web>
+ <compilation debug="true"/>
+ <authentication mode="Windows"/>
+</system.web>
 </configuration>
