--- a/chat/web.config
+++ b/chat/web.config
@@ -5,5 +5,10 @@
 <system.web>
  <compilation debug="true"/>
  <authentication mode="Windows"/>
+ <defaultDocument>
+  <files>
+   <add value="Index.cshtml" />
+  </files>
+ </defaultDocument>
 </system.web>
 </configuration>
