--- a/chat/web.config
+++ b/chat/web.config
@@ -1,8 +1,7 @@
-<?xml version="1.0"?>
- <configuration>
- <appSettings/>
- <connectionStrings/>
-<system.web>
- <compilation debug="true"/>
- <authentication mode="Windows"/>
+<?xml version="1.0" encoding="utf-8"?>
+
+<configuration>
+  <system.web>
+    <compilation debug="true" targetFramework="4.0" />
+  </system.web>
 </configuration>
